--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-10-31 05:01:54 -0500 
+%% Created for Evan Bollig at 2013-11-06 03:14:22 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Kreutzer2012,
+	Author = {Moritz Kreutzer and Georg Hager and Gerhard Wellein and Holger Fehske and Achim Basermann and Alan R. Bishop},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2013-11-06 08:14:15 +0000},
+	Date-Modified = {2013-11-06 08:14:22 +0000},
+	Ee = {http://arxiv.org/abs/1112.5588},
+	Journal = {CoRR},
+	Title = {Sparse matrix-vector multiplication on GPGPU clusters: A new storage format and a scalable implementation},
+	Volume = {abs/1112.5588},
+	Year = {2011}}
 
 @article{Komatitsch2010b,
 	Author = {Dimitri Komatitsch and Gordon Erlebacher and Dominik G\"oddeke and David Mich\'ea},
