--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-06 03:14:22 -0500 
+%% Created for Evan Bollig at 2013-11-06 04:47:05 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -867,14 +867,14 @@ work. A list of this and other possible avenues for future work is also included
 @article{BolligFlyerErlebacher2012,
 	Author = {Evan F. Bollig and Natasha Flyer and Gordon Erlebacher},
 	Date-Added = {2013-08-09 08:30:08 +0000},
-	Date-Modified = {2013-08-30 04:55:38 +0000},
+	Date-Modified = {2013-11-06 09:47:05 +0000},
 	Doi = {http://dx.doi.org/10.1016/j.jcp.2012.06.030},
 	Issn = {0021-9991},
 	Journal = {Journal of Computational Physics},
 	Keywords = {OpenCL},
 	Number = {21},
 	Pages = {7133 - 7151},
-	Title = {Solution to {PDEs} using radial basis function finite-differences (RBF-FD) on multiple {GPUs}},
+	Title = {Solution to {PDEs} using radial basis function finite-differences ({RBF-FD}) on multiple {GPUs}},
 	Url = {http://www.sciencedirect.com/science/article/pii/S0021999112003452},
 	Volume = {231},
 	Year = {2012},
