--- a/latex/publications.tex
+++ b/latex/publications.tex
@@ -16,7 +16,7 @@
 \begin{itemize} 
         \item \bibentry{ErlebacherSauleFlyerBollig2013}
         \item \bibentry{BolligFlyerErlebacher2012}
-        \item \bibentry{BolligFlyerErlebacher2012b}
+%        \item \bibentry{BolligFlyerErlebacher2012b}
         \item \bibentry{BolligSIAMSEAS2012}     
         \item \bibentry{BolligXpo2013}. Also presented at: the Minnesota Supercomputing Institute Research Exhibition, Minneapolis, MN, April 2013
         \item \bibentry{BolligXpo2012}
