--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -591,7 +591,7 @@ This may be a limitation in METIS when partitioning domains for large $p$. If so
 \begin{subfigure}[t]{0.48\textwidth}
 \centering
 \includegraphics[width=\textwidth]{performance_content/scaling/strong_scaling_gflops_4M_overlap_cpu_SpMV_and_comm_all_stencils.png}
-\caption{Strong Scaling GFLOP/sec \\ ($GFLOP/sec = (\ ^{N * n * 2}/_{t_p  (sec)}) * 10^{-9}$)}
+\caption{Strong Scaling GFLOP/sec \\ (    }
 \label{fig:compare_strong_scaling_gflops_all_stencils}
 \end{subfigure}
 \caption{Strong Scaling}
