--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-06 04:47:05 -0500 
+%% Created for Evan Bollig at 2013-11-06 09:53:53 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{Gerstmann2009,
+	Author = {Derek Gerstmann},
+	Date-Added = {2013-11-06 14:51:59 +0000},
+	Date-Modified = {2013-11-06 14:53:53 +0000},
+	Howpublished = {\nolinkurl{http://sa09.idav.ucdavis.edu/docs/SA09-opencl-dg-events-stream.pdf}},
+	Month = {December},
+	Note = {Tutorial Slides},
+	Title = {Advanced OpenCL Event Model Usage},
+	Year = {2009}}
+
+@misc{Vetter,
+	Date-Added = {2013-11-06 14:34:38 +0000},
+	Date-Modified = {2013-11-06 14:34:55 +0000},
+	Howpublished = {\nolinkurl{http://www.cc.gatech.edu/~vetter/keeneland/tutorial-2012-02-20/19-advanced-opt.pdf}}}
 
 @article{Kreutzer2012,
 	Author = {Moritz Kreutzer and Georg Hager and Gerhard Wellein and Holger Fehske and Achim Basermann and Alan R. Bishop},
