Finishing custom kernels

--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -89,6 +89,7 @@ GPUs support single and double precision. RBF-FD certainly requires double preci
 \caption{Roofline Model for NVidia Fermi class GPUs, M2050 and M2070. SpMV Peak: 36 GFLOP/sec.}
 \label{fig:roofline_m2070}
 \end{subfigure}
+\quad
 \begin{subfigure}{0.5\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/spmv/roofline_k20-eps-converted-to.pdf}
