added support param

--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -79,7 +79,7 @@
 
 
 %TODO: Make sure that we obey formatting rules on refs: • Web sites must not be blue, underlined, or contain an active hyperlink (see p. 10).
-\bibliographystyle{plainnat}
+\bibliographystyle{acm}
 \bibliography{merged_references}
 
 \input{biography.tex}
