--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{fsuthesis}
+\documentclass[11pt,expanded]{fsuthesis}
 %,expanded
 \usepackage{standalone}
 \input{all_usepackages}
@@ -52,10 +52,8 @@
 \include{gpu_solver}
 \include{distributed_solver}
 \include{multigpu_rbffd}
-%
 \include{explicit_pde_solutions}
 
-%
 \include{conclusions}
 
 \include{implicit_pde_solutions}
@@ -63,7 +61,7 @@
 \appendix
 \include{rbffd_avoid_pole_singularities}
 \include{rbffd_weights_on_sphere}
-\include{cut_from_distributed_solver}
+
 \include{keeneland_benchmarks}
 \include{publications}
 %\include{stokes_revisited}
